# comfyui-hitem3d

./: .gitignore  CONFIG_GUIDE.md  CONNECTION_GUIDE.md  EXAMPLES_GUIDE.md  GEEKATPLAY_INFO.md  GITHUB_READY.md  HTML_PREVIEWER_README.md  QUICK_SETUP.md  README.md  TROUBLESHOOTING.md  UNIVERSAL_INSTALL.md  VALIDATION_FIX.md  WORKFLOW_EXAMPLE.md  __init__.py  check_balance.py  config.json  history.json  hitem3d_client.py  install.bat  install.ps1  install.sh  install_direct.bat  nodes.py  pyproject.toml  requirements.txt  setup_wizard.bat  setup_wizard.py  update_workflows.py
.github/workflows/: publish.yml
examples/: EXAMPLES_README.md  IMAGE_SETUP.md  README.md  basic_workflow_with_history.json  enhanced_preview_demo.html  hitem3d_basic_workflow.json  hitem3d_complete_preview_workflow.json  hitem3d_config_workflow.json  hitem3d_history_workflow.json  hitem3d_multiview_preview_workflow.json  hitem3d_multiview_workflow.json  hitem3d_showcase_preview_workflow.json  hitem3d_simple_workflow.json  hitem3d_test_preview_simple.json  hitem3d_with_preview_workflow.json  html_previewer_workflow.json
web/: html_previewer_panel.js
