[project]
name = "hitem3d"
description = "A comprehensive ComfyUI node collection that integrates with the HiTem3D API to generate high-quality 3D models from images, featuring advanced HTML preview capabilities and dynamic content generation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI HiTem3D Integration Requirements", "# Created by: Geekatplay Studio by Vladimir Chopine", "# Website: www.geekatplay.com", "# Get HiTem3D Credits: https://www.hitem3d.ai/?sp_source=Geekatplay", "# Core dependencies", "requests>=2.28.0", "Pillow>=9.0.0", "torch>=1.11.0", "numpy>=1.21.0", "# Additional utilities", "pathlib2>=2.3.7; python_version < \"3.4\""]

[project.urls]
Repository = "https://github.com/GeekatplayStudio/comfyui-hitem3d"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GeekatplayStudio/comfyui-hitem3d/wiki"
"Bug Tracker" = "https://github.com/GeekatplayStudio/comfyui-hitem3d/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-hitem3d"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

